--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
         <form id="subnetForm">
             <label for="ipAddress">Adresse IP :</label>
-            <input type="text" id="ipAddress" name="ipAddress" required><br><br>
+            <input type="text" id="ipAddress" name="ipAddress" required placeholder="x.x.x.x"><br><br>
 
             <label for="subnetMaskDecimal">Masque de sous-réseau (en décimal):</label>
-            <input type="text" id="subnetMaskDecimal" name="subnetMaskDecimal"><br><br>
+            <input type="text" id="subnetMaskDecimal" name="subnetMaskDecimal" placeholder="x.x.x.x"><br><br>
 
             <label for="subnetMaskCIDR">Masque de sous-réseau (en CIDR):</label>
-            <input type="text" id="subnetMaskCIDR" name="subnetMaskCIDR"><br><br>
+            <input type="text" id="subnetMaskCIDR" name="subnetMaskCIDR" placeholder="/x"><br><br>
 
             <input type="submit" value="Calculer">
         </form>
