--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <label for="subnetMaskCIDR">Masque de sous-réseau (en CIDR):</label>
             <input type="text" id="subnetMaskCIDR" name="subnetMaskCIDR" placeholder="/x"><br><br>
 
-            <input type="submit" value="Calculer">
+            <input id="btnSubmit" type="submit" value="Calculer">
         </form>
 
         <div id="result">
